--- a/src/styles/d-title.css
+++ b/src/styles/d-title.css
@@ -1,7 +1,7 @@
 d-title {
   padding: 2rem 0 1.5rem;
-  contain: content;
-  overflow: hidden;
+  contain: layout style;
+  overflow-x: hidden;
 }
 
 @media(min-width: 768px) {
